# pyqtgraph-scope-plots

./: README.md  pyproject.toml
.github/license-check/: apache-enphase.txt  config.json
.github/workflows/: python-app.yml  python-publish.yml
pyqtgraph_scope_plots/: __init__.py  animation_plot_table_widget.py  cache_dict.py  code_input_dialog.py  color_signals_table.py  enum_waveform_plotitem.py  filter_signals_table.py  graphics_collections.py  interactivity_mixins.py  legend_plot_widget.py  mixin_cols_table.py  multi_plot_widget.py  plots_table_widget.py  point_on_zoom_plot.py  recents.py  save_restore_model.py  signals_table.py  stats_signals_table.py  time_axis.py  timeshift_signals_table.py  transforms_signal_table.py  util.py  visibility_toggle_table.py  xy_plot.py  xy_plot_legends.py  xy_plot_refgeo.py  xy_plot_splitter.py  xy_plot_table.py  xy_plot_visibility.py
pyqtgraph_scope_plots/csv/: __main__.py  csv_plots.py
pyqtgraph_scope_plots/csv/pivot/: __main__.py
pyqtgraph_scope_plots/util/: cache_dict.py  save_restore_model.py  util.py
tests/: common_testdata.py  test_base_plot.py  test_cache_dict.py  test_colors.py  test_csv_viewer.py  test_droppable_plot.py  test_enum_plot.py  test_linked_plot.py  test_plot_cursors.py  test_point_on_zoom.py  test_save_restore_model_infra.py  test_stats_table.py  test_table_filter.py  test_table_search.py  test_timeshift.py  test_transforms.py  test_transforms_timeshift_table.py  test_util.py  test_visibility.py  test_xy_plot.py  test_xy_plot_refgeo.py  test_xy_plot_visibility.py  util.py
tests/data/: test_csv_viewer_data.csv  test_csv_viewer_data_diffcols.csv  test_csv_viewer_data_sparse.csv
