[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqtgraph-scope-plots"
description = "Scope like plot utilities for pyqtgraph"
readme = "README.md"
version = "1.6.3"
authors = [
    { name = "Richard Lin", email = "richardlin@enphaseenergy.com" }
]
requires-python = "~=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: User Interfaces",
]
license = "Apache-2.0"
dependencies = [
    "PySide6~=6.6,!=6.9.1",  # unit tests fail on 6.9.1
    "pyqtgraph~=0.13",
    "pillow>=9.0",
    "pandas~=2.0",
    "numpy>=1.19",
    "pydantic>=2.0",
    "simpleeval>=1.0",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/enphase/pyqtgraph-scope-plots"
Issues = "https://github.com/enphase/pyqtgraph-scope-plots/issues"

[project.optional-dependencies]
dev = [
    "black~=26.0",
    "isort~=8.0",
    "flake8~=3.9.2",
    "types-PyYAML",
    "pytest~=9.0",
    "pytest-qt~=4.5",
    "pytest-cov~=7.0",
    "pytest-mypy~=1.0",
    "mypy~=1.19",
    "pandas-stubs",
    "PySide6-stubs",
    "flake8-mypy~=17.8.0",
    "pre-commit~=2.13.0",
]

# Configuration for tool compatible with pyproject.toml
[tool.isort]
profile = "black"

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
python_version = "3.10"  # pytest uses 3.10 syntax internally
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
strict = true

[[tool.mypy.overrides]]
module = ["pyqtgraph.*", "simpleeval.*", "pytestqt.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = ["union-attr", "no-untyped-call"]

[tool.pytest]
qt_api = "pyside6"
pythonpath = ["pyqtgraph_scope_plots"]
norecursedirs = [".git"]

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312", "py313"]
